--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,86 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Product Name Label and Input -->
-    <TextView
-        android:id="@+id/tv_product_name_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Product:"
-        android:textSize="16sp"
-        android:layout_marginBottom="4dp"/>
+    <ImageView
+        android:id="@+id/iv_product_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher_background" />
 
     <EditText
         android:id="@+id/et_product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Product Name"
-        android:textSize="16sp" />
-
-    <!-- Product Price Label and Input -->
-    <TextView
-        android:id="@+id/tv_product_price_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Price:"
-        android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="4dp"/>
+        android:layout_below="@id/iv_product_image"
+        android:layout_marginBottom="8dp" />
 
     <EditText
         android:id="@+id/et_product_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Price"
-        android:inputType="numberDecimal"
-        android:textSize="16sp" />
-
-    <!-- Product Description Label and Input -->
-    <TextView
-        android:id="@+id/tv_product_description_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description:"
-        android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="4dp"/>
+        android:hint="Product Price"
+        android:layout_below="@id/et_product_name"
+        android:layout_marginBottom="8dp" />
 
     <EditText
         android:id="@+id/et_product_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Description"
-        android:textSize="16sp" />
+        android:hint="Product Description"
+        android:layout_below="@id/et_product_price"
+        android:layout_marginBottom="16dp" />
 
-    <!-- Product Image -->
-    <ImageView
-        android:id="@+id/iv_product_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop"
-        android:layout_marginTop="16dp" />
-
-    <!-- Update Button -->
     <Button
-        android:id="@+id/btn_update"
-        android:layout_width="match_parent"
+        android:id="@+id/btnSave"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update"
-        android:layout_marginTop="16dp" />
+        android:text="Save"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" />
 
-    <!-- Delete Button -->
     <Button
         android:id="@+id/btn_delete"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@android:color/holo_red_dark"
-        android:textColor="@android:color/white" />
+        android:layout_toStartOf="@id/btnSave"
+        android:layout_alignParentBottom="true" />
 
-</LinearLayout>
+</RelativeLayout>
