--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,71 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:background="@android:color/white"
+    android:layout_margin="4dp"
+    android:elevation="4dp">
 
+    <!-- Product Image -->
     <ImageView
         android:id="@+id/iv_product_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:contentDescription="@string/product_image_desc"
-        android:scaleType="centerCrop"/>
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/product_image_desc"/>
 
-    <TextView
-        android:id="@+id/tv_product_name_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Product: "
-        android:textSize="16sp"
-        android:layout_toEndOf="@id/iv_product_image"
-        android:layout_marginStart="8dp"
-        android:layout_alignParentTop="true"/>
-
+    <!-- Product Name -->
     <TextView
         android:id="@+id/tv_product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_toRightOf="@+id/tv_product_name_label"/>
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="8dp"
+        android:text="Product Name" />
 
-
-    <TextView
-        android:id="@+id/tv_product_price_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Price: "
-        android:textSize="14sp"
-        android:layout_below="@id/tv_product_name"
-        android:layout_toEndOf="@id/iv_product_image"
-        android:layout_marginStart="8dp"/>
-
+    <!-- Product Price -->
     <TextView
         android:id="@+id/tv_product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:layout_below="@+id/tv_product_name"
-        android:layout_toRightOf="@+id/tv_product_price_label"/>
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_marginTop="4dp"
+        android:text="₱Price" />
 
-
-    <TextView
-        android:id="@+id/tv_product_description_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description: "
-        android:textSize="12sp"
-        android:layout_below="@id/tv_product_price"
-        android:layout_toEndOf="@id/iv_product_image"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"/>
-
+    <!-- Product Description -->
     <TextView
         android:id="@+id/tv_product_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/darker_gray"
         android:layout_marginTop="4dp"
-        android:layout_below="@+id/tv_product_price"
-        android:layout_toRightOf="@+id/tv_product_description_label"/>
-
-</RelativeLayout>
+        android:text="Product Description"
+        android:maxLines="2"
+        android:ellipsize="end" />
+</LinearLayout>
