--- a/app/src/main/res/menu/navigationbuyer.xml
+++ b/app/src/main/res/menu/navigationbuyer.xml
@@ -6,8 +6,16 @@
         android:title="Home" />
     <item
         android:id="@+id/trendsId"
-        android:icon="@drawable/home"
+        android:icon="@drawable/trend"
         android:title="Trends" />
+    <item
+        android:id="@+id/notificationId"
+        android:icon="@drawable/notification"
+        android:title="Notification" />
+    <item
+        android:id="@+id/meId"
+        android:icon="@drawable/me"
+        android:title="Me" />
 
 </menu>
 
