--- a/app/src/main/res/layout/fragment_me_seller.xml
+++ b/app/src/main/res/layout/fragment_me_seller.xml
@@ -24,10 +24,12 @@
                     android:id="@+id/profileImageView"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
+                    android:scaleType="fitXY"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:srcCompat="@drawable/me"
                     tools:ignore="MissingConstraints" />
+
 
                 <Button
                     android:id="@+id/uploadButton"
@@ -62,6 +64,17 @@
                     app:layout_constraintStart_toStartOf="@+id/textView"
                     app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
+                <TextView
+                    android:id="@+id/addressTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Address"
+                    android:layout_marginTop="10dp"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView"
+                    app:layout_constraintStart_toStartOf="@+id/textView"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -69,7 +82,22 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2">
+                    app:layout_constraintTop_toBottomOf="@+id/addressTextView">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/inventorybutton"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:text="Inventory Management"
+                        android:textAlignment="viewStart"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginEnd="32dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/profile_btn"
+                        android:layout_marginBottom="10dp"
+                        android:drawablePadding="20dp"
+                        android:paddingStart="20dp"
+                        android:drawableStart="@drawable/inventory"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/settingbutton"
