--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,22 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="8dp"
     android:background="@android:color/white"
     android:layout_margin="4dp"
     android:elevation="4dp">
 
-    <!-- Product Image -->
+
+
     <ImageView
         android:id="@+id/iv_product_image"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/product_image_desc"/>
+        android:layout_height="150dp"
+        android:contentDescription="@string/product_image_desc"
+        android:scaleType="centerCrop" />
 
-    <!-- Product Name -->
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="start"
+        android:layout_marginEnd="16dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="100dp">
+
+        <ImageView
+            android:id="@+id/civ_seller_profile_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/seller_profile_image_desc"
+            android:src="@drawable/gear" />
+
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/tv_product_name"
         android:layout_width="wrap_content"
@@ -36,7 +57,6 @@
         android:layout_marginTop="4dp"
         android:text="₱Price" />
 
-    <!-- Product Description -->
     <TextView
         android:id="@+id/tv_product_description"
         android:layout_width="wrap_content"
@@ -47,4 +67,8 @@
         android:text="Product Description"
         android:maxLines="2"
         android:ellipsize="end" />
+
+
+
+
 </LinearLayout>
