--- a/app/src/main/res/layout/fragment_home_buyer.xml
+++ b/app/src/main/res/layout/fragment_home_buyer.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".HomeFragmentBuyer">
 
-
     <LinearLayout
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
@@ -18,7 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/search_bar"
@@ -43,7 +41,6 @@
             android:src="@drawable/addtocart"
             android:contentDescription="Add to Cart"/>
 
-        <!-- Message Icon -->
         <ImageView
             android:id="@+id/icon_message"
             android:layout_width="30dp"
@@ -51,18 +48,73 @@
             android:layout_marginEnd="13dp"
             android:src="@drawable/message"
             android:contentDescription="Messages"/>
-
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_products"
-        android:layout_width="0dp"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/top_bar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:clipToPadding="false" />
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/label_central_components"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Central Components"
+                android:textSize="18sp"
+                android:layout_margin="16dp"/>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_central_components"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/label_body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Body"
+                android:textSize="18sp"
+                android:layout_margin="16dp"/>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/label_connectors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Connectors"
+                android:textSize="18sp"
+                android:layout_margin="16dp"/>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_connectors"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/label_peripherals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Peripherals"
+                android:textSize="18sp"
+                android:layout_margin="16dp"/>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_peripherals"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
