--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -23,12 +23,17 @@
         android:layout_height="wrap_content"
         android:hint="Product Description" />
 
+    <EditText
+        android:id="@+id/et_product_quantity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Product Quantity"
+        android:inputType="number" />
+
     <Spinner
         android:id="@+id/spinner_category"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/category_array" />
-
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btn_choose_image"
