--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,40 +1,77 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/iv_product_image"
-        android:layout_width="200dp"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher_background" />
+        android:layout_marginBottom="16dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Product Name"
+        android:layout_below="@id/viewPager"
+        android:layout_marginBottom="4dp" />
 
     <EditText
         android:id="@+id/et_product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Product Name"
-        android:layout_below="@id/iv_product_image"
+        android:hint="Enter Product Name"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/viewPager"
         android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Product Price"
+        android:layout_below="@id/et_product_name"
+        android:layout_marginBottom="4dp" />
 
     <EditText
         android:id="@+id/et_product_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Product Price"
+        android:hint="Enter Product Price"
+        android:layout_marginTop="10dp"
         android:layout_below="@id/et_product_name"
         android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Product Description"
+        android:layout_below="@id/et_product_price"
+        android:layout_marginBottom="4dp" />
 
     <EditText
         android:id="@+id/et_product_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Product Description"
+        android:hint="Enter Product Description"
+        android:layout_marginTop="10dp"
         android:layout_below="@id/et_product_price"
+        android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Product Quantity"
+        android:layout_below="@id/et_product_description"
+        android:layout_marginBottom="4dp" />
+
+    <EditText
+        android:id="@+id/et_product_quantity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Product Quantity"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/et_product_description"
         android:layout_marginBottom="16dp" />
 
     <Button
@@ -52,5 +89,4 @@
         android:text="Delete"
         android:layout_toStartOf="@id/btnSave"
         android:layout_alignParentBottom="true" />
-
 </RelativeLayout>
