--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/iv_product_image"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:scaleType="centerCrop" />
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:id="@+id/tv_product_name"
@@ -40,7 +40,6 @@
         android:inputType="number"
         android:maxLines="1"
         android:layout_marginTop="8dp"/>
-
 
     <!-- Add to Cart Button -->
     <Button
