--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -35,14 +35,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <!-- Image Selection for three images -->
     <Button
-        android:id="@+id/btn_choose_image"
+        android:id="@+id/btn_choose_image1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose Image" />
+        android:text="Choose Image 1" />
 
     <ImageView
-        android:id="@+id/iv_product_image"
+        android:id="@+id/iv_product_image1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btn_choose_image2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Image 2" />
+
+    <ImageView
+        android:id="@+id/iv_product_image2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btn_choose_image3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Image 3" />
+
+    <ImageView
+        android:id="@+id/iv_product_image3"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
