--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,14 +1,18 @@
+<!-- res/drawable/button_background.xml -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"/>
-            <corners android:radius="8dp"/>
+            <corners android:radius="12dp" />
+            <solid android:color="#0056B3" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
-            <corners android:radius="8dp"/>
+            <corners android:radius="12dp" />
+            <gradient
+                android:startColor="#007BFF"
+            android:endColor="#0056B3"
+            android:angle="90" />
         </shape>
     </item>
 </selector>
