--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -9,6 +9,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:background="@drawable/viewpager_background"
         android:layout_marginBottom="8dp" />
 
     <TextView
