--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -66,7 +66,6 @@
                 android:text="Product name:"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/cv"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -75,10 +74,49 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
                 app:layout_constraintTop_toBottomOf="@id/cv"
                 app:layout_constraintStart_toEndOf="@id/tv_label_product_name"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_label_product_brand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Brand:"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_name"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_product_brand"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_name"
+                app:layout_constraintStart_toEndOf="@id/tv_label_product_brand"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_label_product_year_model"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Year Model:"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_brand"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_product_year_model"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_brand"
+                app:layout_constraintStart_toEndOf="@id/tv_label_product_year_model"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
@@ -88,8 +126,7 @@
                 android:text="Price:"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_label_product_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_year_model"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
@@ -98,8 +135,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_label_product_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_year_model"
                 app:layout_constraintStart_toEndOf="@id/tv_label_product_price"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -110,8 +146,7 @@
                 android:text="Description:"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_label_product_price"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_price"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
@@ -120,8 +155,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_label_product_price"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_price"
                 app:layout_constraintStart_toEndOf="@id/tv_label_product_description"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -149,48 +183,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <TextView
-                android:id="@+id/tv_comments_header"
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btn_add_review"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Comments"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:text="Add Review"
                 android:layout_marginTop="16dp"
+                android:backgroundTint="#2196F3"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
                 app:layout_constraintTop_toBottomOf="@id/et_product_quantity"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_comments"
+                android:id="@+id/rv_reviews"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_comments_header"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:nestedScrollingEnabled="false"/>
-
-            <EditText
-                android:id="@+id/et_new_comment"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:hint="Add a comment"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/rv_comments"
+                app:layout_constraintTop_toBottomOf="@id/btn_add_review"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/iv_send_comment"/>
-
-            <ImageView
-                android:id="@+id/iv_send_comment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/send"
-                android:contentDescription="Send Comment"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/rv_comments"
                 app:layout_constraintEnd_toEndOf="parent"/>
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
@@ -222,5 +237,6 @@
         app:layout_constraintStart_toEndOf="@id/btn_add_to_cart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.5"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
