--- a/app/src/main/res/layout/fragment_ordered_products.xml
+++ b/app/src/main/res/layout/fragment_ordered_products.xml
@@ -5,7 +5,10 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_cart"
+        android:id="@+id/recyclerView_ordered"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        android:clipToPadding="false"
+        android:scrollbars="vertical" />
 </LinearLayout>
